--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </tr>
           <tr>
             <td>Email</td>
-            <td><a href="#contactoMail"></a>edithivaniez@gmail.com</td>
+            <td><a href="mailto:edithivaniez@gmail.com">edithivaniez@gmail.com</a></td>
           </tr>
         </tbody>
       </table>
